<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        android:background="@drawable/rectangle_grey_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9.4"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <com.beachboxdeliveryapp.widgets.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:gravity="bottom|center|left"
                android:text="@string/username"
                android:textColor="@color/black"
                android:paddingBottom="7dp"
                android:textSize="19dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="1dp"
                android:layout_weight="0.8"
                android:background="@drawable/edt_cellborder"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:singleLine="true" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:orientation="horizontal"
                android:weightSum="10">

                <com.beachboxdeliveryapp.widgets.TextViewRegular
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="bottom|left|center"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:paddingBottom="7dp"
                    android:textSize="19dp" />

                <com.beachboxdeliveryapp.widgets.TextViewLight
                    android:id="@+id/tvForgotPass"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:paddingBottom="7dp"
                    android:gravity="bottom|center|right"
                    android:text="@string/forgotp"
                    android:textColor="@color/gray"
                    android:textSize="16dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

         <!--   <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="1dp"
                android:layout_weight="0.8"
                android:background="@drawable/edt_cellborder"
                android:paddingLeft="5dp"
                android:password="true"
                android:singleLine="true" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:background="@drawable/edt_cellborder"
                android:orientation="horizontal"
                android:weightSum="10">

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9.8"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword"
                    android:gravity="left|center"
                    android:paddingLeft="7dp"
                    android:singleLine="true" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.beachboxdeliveryapp.widgets.TextViewBold
                android:id="@+id/tv_signIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/signin"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />
    </LinearLayout>
</LinearLayout>