<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/backgroundGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:weightSum="10"
        android:orientation="horizontal"
        android:focusable="false"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"/>
        <!--<LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="10">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:background="@drawable/btn_back"
                android:id="@+id/tv_back"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"/>
        </LinearLayout>-->
        <com.beachboxdeliveryapp.widgets.TextViewBold
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:text="@string/myAccount"
            android:textSize="22sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9.8"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>
           <!-- <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profileImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:layout_gravity="center"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="1dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"/>
            </LinearLayout>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.3"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_profileImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:src="@drawable/blank_resturant"
                        android:visibility="visible" />
                </RelativeLayout>


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="22sp"
                android:gravity="center"
                android:id="@+id/tv_userName"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:weightSum="10">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"/>
                <com.beachboxdeliveryapp.widgets.TextViewRegular
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_email"
                    android:gravity="center"
                    android:textSize="15sp"/>

            </LinearLayout>
            <com.beachboxdeliveryapp.widgets.TextViewRegular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/Edit"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/tv_edit"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>

            <!--<android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardCornerRadius="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/payments"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardCornerRadius="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">
                    <com.beachboxdeliveryapp.widgets.TextViewBold
                        android:id="@+id/tvHelp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/help"
                        android:textColor="@color/black"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:elevation="2dp"
                app:cardCornerRadius="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">
                    <com.beachboxdeliveryapp.widgets.TextViewBold
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:text="@string/logout"
                        android:textColor="@color/black"
                        android:gravity="center|left"
                        android:paddingLeft="10dp"
                        android:textSize="18dp"
                        android:id="@+id/tv_logout"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

    </LinearLayout>
</LinearLayout>